# vcf2bgen

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libVcf/: CMakeLists.txt  Makefile  VcfFile.cpp  VcfFile.h
libVcf/libStatGenLite/: CMakeLists.txt
src/: CMakeLists.txt  bgen.cpp  bgen_ext.cpp
src/genfile/: zlib.hpp
src/genfile/bgen/: bgen.hpp  bgen_ext.hpp
